src/microservices/onprem/app1-process/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-process-deployment
  labels:
    name: app1-process
    app: app1
    managed-by: manifest
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app1-process
  template:
    metadata:
      labels:
        name: app1-process
    spec:
      containers:
      - name: app1-process
        image: nuttaporn1449/app1-process:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 256Mi
            #cpu: 500m
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 60
      imagePullSecrets:
        - name: regcred
