src/microservices/onprem/app1-process/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-process-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    name: app1-process
